docs: restructure navigation into 4 dropdowns with domain-based guides
- Reorganize top-level nav: Getting Started, Guides, API Reference, SDK
- Getting Started: Introduction, Setup, Reference, Advanced sections
- Guides: organize by domain (Messaging, Content, Media, Management)
- Consolidate Link guides into single comprehensive page
- Merge environment docs into getting-started/sandbox
- Add services overview and restore onlyfans-api precautions page
- Fix all internal links to match new structure
- Add missing Link API endpoints (GET/DELETE session)
- Clarify upload flow: single-part auto-completes, multi-part needs /complete
- Add Vault Cache billing info (per GB/month)

--- a/api-reference/access/overview.mdx
+++ b/api-reference/access/overview.mdx
@@ -6,7 +6,7 @@ description: "Proxied access to OnlyFans data with automatic session management"
 
 The Access API provides managed endpoints for common operations and proxy endpoints for any OnlyFans API path. OFAuth handles request signing, session management, and retries automatically.
 
-<Card title="Access Guide" icon="book" href="/reference/access">
+<Card title="Access Guide" icon="book" href="/api-reference/access/overview">
   Complete guide with authentication, endpoints, media proxy, rate limiting, and troubleshooting
 </Card>
 
@@ -30,7 +30,7 @@ x-connection-id: conn_abc123
   <Card title="Proxy Endpoints" icon="shuffle" href="/api-reference/access/proxy">
     Passthrough to any OnlyFans path
   </Card>
-  <Card title="Link API" icon="link" href="/guides/link/overview">
+  <Card title="Link API" icon="link" href="/guides/link">
     Get connection IDs for authentication
   </Card>
 </CardGroup>
