--- a/api-reference/link/overview.mdx
+++ b/api-reference/link/overview.mdx
@@ -6,7 +6,7 @@ description: "Authenticate OnlyFans users and obtain connection IDs"
 
 The Link API handles user authentication through hosted flows. Users authenticate on OFAuth's secure pages, and you receive a connection ID to use with the Access API.
 
-<Card title="Link Guide" icon="book" href="/guides/link/overview">
+<Card title="Link Guide" icon="book" href="/guides/link">
   Complete guide with integration options, security configuration, and implementation examples
 </Card>
 
@@ -27,10 +27,10 @@ apikey: YOUR_API_KEY
 **Required Scope:** `LINK`
 
 <CardGroup cols={2}>
-  <Card title="Hosted Mode" icon="external-link" href="/guides/link/hosted">
+  <Card title="Hosted Mode" icon="external-link" href="/guides/link#hosted-mode">
     Redirect-based authentication
   </Card>
-  <Card title="Link Embed" icon="window" href="/guides/link/embed">
+  <Card title="Link Embed" icon="window" href="/guides/link#embed-mode">
     Popup authentication without redirects
   </Card>
 </CardGroup>
