--- a/enterprise/whitelabel.mdx
+++ b/enterprise/whitelabel.mdx
@@ -26,7 +26,7 @@ Whitelabel mode is designed for enterprise partners who need:
 - Custom security and compliance requirements
 
 <Info>
-  **Most applications don't need whitelabel mode.** Our [Hosted Mode](/guides/link/hosted) and [Link Embed](/guides/link/embed) provide excellent user experiences with minimal integration effort. Only pursue whitelabel if you have specific requirements that hosted solutions cannot meet.
+  **Most applications don't need whitelabel mode.** Our [Hosted Mode](/guides/link#hosted-mode) and [Link Embed](/guides/link#embed-mode) provide excellent user experiences with minimal integration effort. Only pursue whitelabel if you have specific requirements that hosted solutions cannot meet.
 </Info>
 
 ## Capabilities
@@ -97,10 +97,10 @@ To request enterprise whitelabel access, please contact our team with the follow
 Before pursuing whitelabel, consider whether these solutions meet your needs:
 
 <CardGroup cols={2}>
-  <Card title="Hosted Mode" icon="external-link" href="/guides/link/hosted">
+  <Card title="Hosted Mode" icon="external-link" href="/guides/link#hosted-mode">
     Redirect-based authentication with minimal integration effort
   </Card>
-  <Card title="Link Embed" icon="window" href="/guides/link/embed">
+  <Card title="Link Embed" icon="window" href="/guides/link#embed-mode">
     Popup-based authentication that keeps users in your app
   </Card>
 </CardGroup>
