--- a/guides/how-to/create-post.mdx
+++ b/guides/how-to/create-post.mdx
@@ -8,7 +8,7 @@ Learn how to create posts on OnlyFans using the OFAuth API, including adding med
 ## Prerequisites
 
 <Check>
-  You have a [connected OnlyFans account](/guides/how-to/connect-account) with a valid `connectionId`
+  You have a [connected OnlyFans account](/guides/link) with a valid `connectionId`
 </Check>
 
 <Check>
