--- a/guides/media-storage.mdx
+++ b/guides/media-storage.mdx
@@ -153,7 +153,7 @@ curl -X DELETE 'https://api.ofauth.com/v2/vault/purge' \
   <Card title="Media & Vault" icon="photo-film" href="/use-cases/media">
     Full media operations guide
   </Card>
-  <Card title="Vault Cache API" icon="database" href="/api-reference/vault-cache/cache">
+  <Card title="Access API" icon="key" href="/api-reference/access/overview">
     Complete API reference
   </Card>
 </CardGroup>
