--- a/index.mdx
+++ b/index.mdx
@@ -8,7 +8,7 @@ description: "OnlyFans integration infrastructure for platforms. Connect account
 OFAuth is infrastructure that lets you integrate OnlyFans into your platform—without reverse engineering, credential handling, or maintenance headaches. Think **Plaid, but for OnlyFans**.
 
 <CardGroup cols={2}>
-  <Card title="I'm evaluating OFAuth" icon="magnifying-glass" href="/overview/why-ofauth">
+  <Card title="I'm evaluating OFAuth" icon="magnifying-glass" href="/overview/services">
     Understand how OFAuth works, security model, and why platforms choose us
   </Card>
   <Card title="I'm ready to build" icon="rocket" href="/quickstart">
@@ -112,10 +112,10 @@ graph LR
 ## Get Help
 
 <CardGroup cols={2}>
-  <Card title="Discord Community" icon="discord" href="https://discord.gg/ofauth">
-    Connect with other developers building on OFAuth
-  </Card>
   <Card title="Email Support" icon="envelope" href="mailto:support@ofauth.com">
     Direct support from our engineering team
+  </Card>
+  <Card title="API Reference" icon="book" href="/api-reference/access/overview">
+    Browse our complete API documentation
   </Card>
 </CardGroup>
