--- a/sdk/core-concepts/authentication.mdx
+++ b/sdk/core-concepts/authentication.mdx
@@ -47,7 +47,7 @@ const { data, error } = await sdk.user.getById({
 ```
 
 <Info>
-  **Connection IDs** are obtained through OFAuth Link and represent authorized connections to specific OnlyFans accounts. See the [Link documentation](/guides/link/overview) for setup details.
+  **Connection IDs** are obtained through OFAuth Link and represent authorized connections to specific OnlyFans accounts. See the [Link documentation](/guides/link) for setup details.
 </Info>
 
 ## Direct Mode (Enterprise)
@@ -75,7 +75,7 @@ const { data, error } = await sdk.user.getById({
   <Card title="Core Modules" icon="book" href="/sdk/modules/authentication/link-authentication">
     **Start building** - Explore the available modules and operations
   </Card>
-  <Card title="Link Setup" icon="link" href="/guides/link/overview">
+  <Card title="Link Setup" icon="link" href="/guides/link">
     **Authentication flows** - Set up OFAuth Link for user connections
   </Card>
 </CardGroup>
