--- a/sdk/modules/authentication/link-authentication.mdx
+++ b/sdk/modules/authentication/link-authentication.mdx
@@ -12,7 +12,7 @@ description: "Enterprise SDK methods for programmatic authentication - requires 
 The Link module (`sdk.link`) provides direct authentication capabilities for building custom login experiences. This is intended for approved enterprise partners who need full control over the authentication flow.
 
 <Info>
-  **For most applications**: Use [Hosted Mode](/guides/link/hosted) or [Link Embed](/guides/link/embed) instead. These provide excellent user experiences and are available immediately without approval.
+  **For most applications**: Use [Hosted Mode](/guides/link#hosted-mode) or [Link Embed](/guides/link#embed-mode) instead. These provide excellent user experiences and are available immediately without approval.
 </Info>
 
 ## Session Initialization
