--- a/api-reference/access/proxy.mdx
+++ b/api-reference/access/proxy.mdx
@@ -251,7 +251,7 @@ OFAuth rate limits are separate from OnlyFans' native rate limits. You may still
 Authenticate users and get connection IDs
 </Card>
 
-<Card title="Access Guide" href="/reference/access">
+<Card title="Access Guide" href="/api-reference/access/overview">
 Detailed guide with examples and best practices
 </Card>
 </CardGroup>
