--- a/reference/rate-limiting.mdx
+++ b/reference/rate-limiting.mdx
@@ -1,7 +1,7 @@
 ---
-title: "Rate Limiting Architecture"
-description:
-  "Token bucket rate limiting system, limits, and optimization strategies"
+title: "Rate Limiting"
+sidebarTitle: "Rate Limiting"
+description: "Token bucket rate limiting system, limits, and optimization strategies"
 ---
 
 ## Overview
@@ -77,7 +77,7 @@ Contact support with:
   <Card title="Error Handling" icon="exclamation-triangle" href="/reference/error-handling">
     Error codes and debugging strategies
   </Card>
-  <Card title="Access Guide" icon="key" href="/reference/access">
+  <Card title="Access Guide" icon="key" href="/api-reference/access/overview">
     Using the Access API
   </Card>
 </CardGroup>
