--- a/use-cases/media.mdx
+++ b/use-cases/media.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Media & Vault"
+sidebarTitle: "Overview"
 description: "Upload media, access vault, and embed content"
 ---
 
@@ -139,22 +140,19 @@ const response = await fetch("https://api.ofauth.com/v2/access/vault/lists/LIST_
 
 ## Uploading Media
 
-Media uploads use a multi-step process:
+The `/uploads/init` response determines whether you need single-part or multi-part upload:
 
-<Steps>
-  <Step title="Initialize Upload">
-    Call `/uploads/init` to get an upload session
-  </Step>
-  <Step title="Upload File">
-    Upload the file using the returned session info
-  </Step>
-  <Step title="Complete Upload">
-    Call `/uploads/complete` to finalize and process the media
-  </Step>
-</Steps>
+| Header | Meaning |
+|--------|---------|
+| `x-ofauth-upload-total-parts: 1` | Single-part upload (auto-completes) |
+| `x-ofauth-upload-total-parts: N` | Multi-part upload (requires `/complete`) |
+
+### Single-Part Upload (Small Files)
+
+For small files where `x-ofauth-upload-total-parts` is `1`, upload completes automatically:
 
 ```javascript
-// Step 1: Initialize upload
+// Step 1: Initialize
 const initResponse = await fetch("https://api.ofauth.com/v2/access/uploads/init", {
   method: "POST",
   headers: {
@@ -164,28 +162,78 @@ const initResponse = await fetch("https://api.ofauth.com/v2/access/uploads/init"
   },
   body: JSON.stringify({
     filename: "photo.jpg",
-    filesize: 1024000,  // File size in bytes
+    filesize: 1024000,
     mimeType: "image/jpeg"
   })
 })
 
 const { mediaUploadId } = await initResponse.json()
-// Check x-ofauth-upload-total-parts header for chunking info
+const totalParts = initResponse.headers.get("x-ofauth-upload-total-parts")
 
-// Step 2: Upload file (single part for small files)
-await fetch(`https://api.ofauth.com/v2/access/uploads/${mediaUploadId}`, {
-  method: "PUT",
+// Step 2: Upload file (auto-completes for single-part)
+const uploadResponse = await fetch(
+  `https://api.ofauth.com/v2/access/uploads/${mediaUploadId}`,
+  {
+    method: "PUT",
+    headers: {
+      apikey: "YOUR_API_KEY",
+      "x-connection-id": "conn_abc123",
+      "Content-Type": "image/jpeg"
+    },
+    body: fileBuffer
+  }
+)
+
+// Done! Response contains the media info directly
+const { media } = await uploadResponse.json()
+console.log("Uploaded media ID:", media.id)
+```
+
+### Multi-Part Upload (Large Files)
+
+For larger files where `x-ofauth-upload-total-parts` is greater than `1`, upload in chunks and call `/complete`:
+
+```javascript
+// Step 1: Initialize
+const initResponse = await fetch("https://api.ofauth.com/v2/access/uploads/init", {
+  method: "POST",
   headers: {
     apikey: "YOUR_API_KEY",
     "x-connection-id": "conn_abc123",
-    "Content-Type": "image/jpeg"
+    "Content-Type": "application/json"
   },
-  body: fileBuffer
+  body: JSON.stringify({
+    filename: "video.mp4",
+    filesize: 50000000,  // 50MB
+    mimeType: "video/mp4"
+  })
 })
 
-// For multi-part uploads, use /uploads/:mediaUploadId/parts/:partNumber
+const { mediaUploadId } = await initResponse.json()
+const totalParts = parseInt(initResponse.headers.get("x-ofauth-upload-total-parts"))
+const partSize = parseInt(initResponse.headers.get("x-ofauth-upload-part-size"))
 
-// Step 3: Complete upload (if using chunked upload)
+// Step 2: Upload each chunk
+for (let partNumber = 1; partNumber <= totalParts; partNumber++) {
+  const start = (partNumber - 1) * partSize
+  const end = Math.min(start + partSize, fileBuffer.length)
+  const chunk = fileBuffer.slice(start, end)
+
+  await fetch(
+    `https://api.ofauth.com/v2/access/uploads/${mediaUploadId}/parts/${partNumber}`,
+    {
+      method: "PUT",
+      headers: {
+        apikey: "YOUR_API_KEY",
+        "x-connection-id": "conn_abc123",
+        "Content-Type": "video/mp4"
+      },
+      body: chunk
+    }
+  )
+}
+
+// Step 3: Complete upload (required for multi-part only)
 const completeResponse = await fetch("https://api.ofauth.com/v2/access/uploads/complete", {
   method: "POST",
   headers: {
@@ -200,6 +248,11 @@ const { media } = await completeResponse.json()
 console.log("Uploaded media ID:", media.id)
 ```
 
+<Info>
+  **Single-part**: No `/complete` call needed—the PUT response returns the media directly.
+  **Multi-part**: Must call `/complete` after all chunks are uploaded.
+</Info>
+
 ---
 
 ## Media Storage Options
@@ -212,6 +265,7 @@ OFAuth provides two complementary solutions for handling OnlyFans media:
 | **Access** | Via API response URLs | By media ID directly |
 | **Storage** | Temporary (edge cache) | Persistent storage |
 | **Setup** | Automatic | Requires enabling |
+| **Billing** | Per KB bandwidth | Per GB/month storage |
 | **Best for** | Immediate display | PPV features, offline access |
 
 <Card title="Media Storage Guide" icon="database" href="/guides/media-storage">
@@ -274,9 +328,18 @@ await fetch("https://media.ofauth.com/abc123...", { method: "DELETE" })
 
 ### Billing
 
-<Warning>
-  Media proxy usage is billed per KB of bandwidth. Cache hits (up to 7 days) are free. See your dashboard for usage details.
-</Warning>
+<CardGroup cols={2}>
+  <Card title="Media Proxy" icon="globe">
+    Billed per KB of bandwidth transferred. Cache hits (within 7 days) are free.
+  </Card>
+  <Card title="Vault Cache" icon="database">
+    Billed per GB/month of storage. Persistent storage for media you need long-term access to.
+  </Card>
+</CardGroup>
+
+<Info>
+  Monitor usage in your [dashboard](https://app.ofauth.com). Media Proxy is best for temporary display; Vault Cache is best for building permanent media libraries.
+</Info>
 
 ---
 
@@ -411,8 +474,8 @@ List types: `custom`, `messages`, `posts`, `stories`, `streams`, `media_stickers
   <Card title="Media Storage" icon="database" href="/guides/media-storage">
     Media Proxy vs Vault Cache - when to use each
   </Card>
-  <Card title="Vault Cache API" icon="archive" href="/api-reference/vault-cache/cache">
-    Access cached media by ID
+  <Card title="Access API" icon="key" href="/api-reference/access/overview">
+    Complete API reference
   </Card>
   <Card title="Content & Posts" icon="image" href="/use-cases/content">
     Use media in posts and stories
